test: mejorar configuración de pruebas
- Agregar scripts para limpieza y inicialización de base de datos de pruebas
- Actualizar script principal de pruebas
- Actualizar dependencias relacionadas con testing
- Documentar cambios en test-plan y progress

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,13 +8,15 @@
     "build": "tsc",
     "test": "ts-node scripts/test/run-tests.ts",
     "test:unit": "ts-node scripts/test/run-tests.ts unit",
-    "test:integration": "ts-node scripts/test/run-tests.ts integration",
+    "test:integration": "npm run test:db:init && ts-node scripts/test/run-tests.ts integration",
     "test:auth": "ts-node scripts/test/run-tests.ts auth",
     "test:user": "ts-node scripts/test/run-tests.ts user",
     "test:watch": "ts-node scripts/test/run-tests.ts all --watch",
     "test:coverage": "ts-node scripts/test/run-tests.ts all --coverage",
     "test:debug": "ts-node scripts/test/run-tests.ts all --debug",
     "test:update-snapshots": "ts-node scripts/test/run-tests.ts all -u",
+    "test:db:init": "ts-node scripts/test/init-test-db.ts",
+    "test:db:clean": "ts-node scripts/test/clean-test-db.ts",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "typecheck": "tsc --noEmit",
