--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -37,12 +37,14 @@
     "@jest/globals": "^29.7.0",
     "@nestjs/common": "^11.0.13",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/compression": "^1.7.5",
     "@types/multer": "^1.4.12",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
@@ -54,6 +56,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pg": "^8.11.3",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.20",
     "winston": "^3.17.0"
