chore(deps): update dependencies and related configurations
Includes updates to package.json and package-lock.json reflecting dependency changes or script adjustments made during recent development tasks.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,7 @@
     "db:create": "ts-node scripts/db/create-database.ts",
     "db:drop": "ts-node scripts/db/drop-database.ts",
     "db:seed": "ts-node scripts/db/seed-database.ts",
+    "fix-user-role": "ts-node scripts/fix-user-role.ts",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
     "commit": "git-cz"
@@ -68,10 +69,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/geojson": "^7946.0.16",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/ms": "^0.7.34",
     "@types/node": "^20.11.16",
+    "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
