--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,39 +6,57 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix",
+    "lint:strict": "eslint './src/**/*.{ts,tsx}' --max-warnings 0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "clean": "rm -rf node_modules/.cache && npm cache clean --force",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@tanstack/react-query": "^5.71.5",
+    "@hookform/resolvers": "^5.0.1",
+    "@tanstack/react-query": "^5.73.3",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.1",
     "@types/react-datepicker": "^6.2.0",
+    "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "next": "15.2.4",
+    "next": "^14.2.28",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
-    "react-datepicker": "^8.2.1",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.2",
+    "recharts": "^2.12.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.1.0",
+    "typescript": "^5.3.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20.17.30",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^14.2.0",
+    "@testing-library/user-event": "^14.5.0",
+    "@types/cypress": "^0.1.6",
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.0",
+    "cypress": "^14.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.2.28",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.1.0"
   }
 }
