--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,115 +2,77 @@
   "name": "@mante/backend",
   "version": "1.0.0",
   "description": "Backend services for the Mante system",
+  "private": true,
+  "license": "MIT",
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register src/index.ts",
-    "dev": "nodemon",
-    "build": "tsc",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
-    "test:unit": "jest --testMatch='**/*.unit.test.ts'",
-    "test:integration": "npm run test:db:init && jest --testMatch='**/*.integration.test.ts'",
-    "test:auth": "jest --testMatch='**/auth.*.test.ts'",
-    "test:user": "jest --testMatch='**/user.*.test.ts'",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:debug": "jest --runInBand --detectOpenHandles",
-    "test:update-snapshots": "jest -u",
-    "test:db:init": "ts-node scripts/test/init-test-db.ts",
-    "test:db:clean": "ts-node scripts/test/clean-test-db.ts",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "typecheck": "tsc --noEmit",
-    "clean": "rimraf dist coverage",
-    "prepare": "",
-    "postinstall": "",
-    "db:migrate": "typeorm migration:run",
-    "db:revert": "typeorm migration:revert",
-    "db:generate": "typeorm migration:generate",
-    "db:create": "ts-node scripts/db/create-database.ts",
-    "db:drop": "ts-node scripts/db/drop-database.ts",
-    "db:seed": "ts-node scripts/db/seed-database.ts",
-    "fix-user-role": "ts-node scripts/fix-user-role.ts",
-    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "commit": "git-cz"
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@jest/globals": "^29.7.0",
-    "@nestjs/common": "^11.0.13",
-    "@nestjs/typeorm": "^11.0.0",
-    "@types/compression": "^1.7.5",
-    "@types/multer": "^1.4.12",
-    "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.17",
-    "bcrypt": "^5.1.1",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/typeorm": "^10.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "compression": "^1.8.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "geojson": "^0.5.0",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "ms": "^2.1.3",
-    "multer": "^1.4.5-lts.2",
-    "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.0",
     "pg": "^8.11.3",
-    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.1",
-    "typeorm": "^0.3.20",
-    "winston": "^3.17.0"
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@commitlint/types": "^18.6.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/express": "^4.17.21",
     "@types/geojson": "^7946.0.16",
-    "@types/jest": "^29.5.11",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/ms": "^0.7.34",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
-    "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "lint-staged": "^15.0.0",
-    "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
-    "rimraf": "^5.0.5",
+    "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "eslint --fix",
-      "prettier --write",
-      "jest --findRelatedTests --passWithNoTests"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
     ],
-    "*.{json,md,yml}": [
-      "prettier --write"
-    ]
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
